--- a/Practice02/src/style/sass/layout/_footer.scss
+++ b/Practice02/src/style/sass/layout/_footer.scss
@@ -6,23 +6,23 @@ footer {
     margin-top: 56px;
     display: flex;
     margin-left: -6px;
-}
-
-.company ul,
-.support ul,
-.legal ul {
+  }
+  
+  .company ul,
+  .support ul,
+  .legal ul {
     display: none;
-}
-
-.company,
-.support,
-.legal,
-.app {
+  }
+  
+  .company,
+  .support,
+  .legal,
+  .app {
     display: flex;
     justify-content: space-between;
-}
-
-.footer__content {
+  }
+  
+  .footer__content {
     flex-flow: row;
     justify-content: space-around;
     display: flex;
@@ -30,34 +30,34 @@ footer {
     margin-top: 41px;
     margin-left: 21px;
     gap: 34px;
-}
-
-.company img,
-.support img,
-.legal img {
+  }
+  
+  .company img,
+  .support img,
+  .legal img {
     width: 14px;
     height: 10px;
-}
-
-.company p,
-.support p,
-.legal p,
-.app p {
+  }
+  
+  .company p,
+  .support p,
+  .legal p,
+  .app p {
     color: var(--primary-color);
-    font-family: 'Inter';
+    font-family: "Inter";
     font-size: 16px;
     font-weight: 600;
     line-height: 16px;
     margin-left: 30px;
     width: 84px;
-}
-
-.app {
+  }
+  
+  .app {
     display: flex;
     flex-direction: column;
-}
-
-.footer__install-app {
+  }
+  
+  .footer__install-app {
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -67,229 +67,231 @@ footer {
     object-fit: fill;
     width: 100px;
     height: 100px;
-}
-
-.footer__install-app img {
+  }
+  
+  .footer__install-app img {
     width: 180px;
     height: 53.333px;
-}
-
-.vector {
+  }
+  
+  .vector {
     margin-right: 46px;
-}
-
-.line-footer {
+  }
+  
+  .line-footer {
     border: 0.1px solid var(--primary-color);
     color: var(--primary-color);
     opacity: 0.1;
     margin-top: 36px;
-}
-
-.social-icon {
+  }
+  
+  .social-icon {
     display: none;
-}
-
-.social-icon img {
+  }
+  
+  .social-icon img {
     width: 100%;
     height: auto;
-}
-
-.copy-right {
-    color: #D9DBE1;
+  }
+  
+  .copy-right {
+    color: #d9dbe1;
     margin-left: 32px;
-    font-family: 'Inter';
+    font-family: "Inter";
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 14px;
     padding: 20px;
     margin-top: 14px;
-}
-
-.app a {
+  }
+  
+  .app a {
     width: 20px;
-}
-
-.footer__copy-right {
+  }
+  
+  .footer__copy-right {
     margin-bottom: 3px;
-}
-
-@media only screen and (min-width: 992px) {
+  }
+  
+  @media only screen and (min-width: 992px) {
     footer {
-        align-items: center;
-        width: 100%;
-        height: 417px;
-        margin-top: 56px;
-        display: flex;
-        margin: auto;
+      align-items: center;
+      width: 100%;
+      height: 417px;
+      margin-top: 56px;
+      display: flex;
+      margin: auto;
     }
-
+  
     .footer__content {
-        flex-flow: row;
-        justify-content: space-evenly;
-        display: flex;
-        width: 85%;
-        height: 280px;
-        margin-top: 25px;
-        margin-right: 85px;
+      flex-flow: row;
+      justify-content: space-evenly;
+      display: flex;
+      width: 85%;
+      height: 280px;
+      margin-top: 25px;
+      margin-right: 85px;
     }
-
+  
     .company ul,
     .support ul,
     .legal ul {
-        display: block;
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
+      display: block;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
     }
-
+  
     .company ul li,
     .support ul li,
     .legal ul li {
-        padding-bottom: 23px;
-        width: 128px;
-        height: 16px;
-        cursor: pointer;
-        margin-left: 30px;
+      padding-bottom: 23px;
+      width: 128px;
+      height: 16px;
+      cursor: pointer;
+      margin-left: 30px;
     }
-
+  
     .company ul li a,
     .support ul li a,
     .legal ul li a {
-        text-decoration: none;
-        color: var(--primary-color);
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 16px;
+      text-decoration: none;
+      color: var(--primary-color);
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 16px;
     }
-
+  
     .company,
     .support,
     .legal,
     .app {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: 25px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 25px;
     }
-
+  
     .company {
-        margin-left: 15px;
+      margin-left: 15px;
     }
-
+  
     .support {
-        margin-right: 32px;
-        margin-bottom: 35px;
+      margin-right: 32px;
+      margin-bottom: 35px;
     }
-
+  
     .legal {
-        margin-right: 49px;
-        margin-bottom: 38px;
+      margin-right: 49px;
+      margin-bottom: 38px;
     }
-
+  
     .app {
-        display: flex;
-        flex-direction: column;
-        margin-top: 14px;
-        margin-left: 6px;
-        gap: 9px
+      display: flex;
+      flex-direction: column;
+      margin-top: 14px;
+      margin-left: 6px;
+      gap: 9px;
     }
-
+  
     .footer__install-app {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        margin-bottom: 60px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-bottom: 60px;
     }
-
+  
     .vector {
-        display: none;
+      display: none;
     }
-
+  
     .line-footer {
-        width: 100%;
-        margin-top: 5px;
+      width: 100%;
+      margin-top: 5px;
     }
-
+  
     .footer__copy-right {
-        justify-content: space-around;
-        display: flex;
+      justify-content: space-around;
+      display: flex;
     }
-
+  
     .copy-right {
-        width: 38%;
-        height: 14px;
-        margin-top: 20px;
-        margin-left: 6px;
-        font-size: 14px;
+      width: 38%;
+      height: 14px;
+      margin-top: 20px;
+      margin-left: 6px;
+      font-size: 14px;
     }
-
+  
     .social-icon {
-        display: block;
-        gap: 23px;
-        margin-right: 41px;
-        display: flex;
-        margin-top: 30px;
+      display: block;
+      gap: 23px;
+      margin-right: 19px;
+      display: flex;
+      margin-top: 30px;
     }
-
+  
     .app a {
-        width: 20px;
+      width: 20px;
     }
-}
-
-@media only screen and (min-width: 1400px) {
+  }
+  
+  @media only screen and (min-width: 1400px) {
     .footer__content {
-        align-items: center;
-        max-width: 816px;
-        margin-top: 45px;
-        gap: 102px;
+      align-items: center;
+      max-width: 816px;
+      margin-top: 45px;
+      gap: 102px;
+      margin-left: 46px;
     }
-
+  
     .company {
-        margin-left: 16px;
-        margin-right: 5px;
-        margin-bottom: 8px;
+      margin-left: 3px;
+      margin-right: 5px;
+      margin-bottom: 8px;
     }
-
+  
     .support {
-        margin-right: 25px;
-        margin-bottom: 46px;
+      margin-right: 25px;
+      margin-bottom: 46px;
     }
-
+  
     .legal {
-        margin-right: 52px;
-        margin-bottom: 47px;
+      margin-right: 50px;
+      margin-bottom: 47px;
     }
-
+  
     .app {
-        margin-top: 2px;
-        margin-left: 5px;
-        margin-right: 108px;
-        gap: 15px
+      margin-top: 2px;
+      margin-left: 5px;
+      margin-right: 92px;
+      gap: 15px;
     }
-
+  
     .line-footer {
-        margin-top: 16px;
+      margin-top: 16px;
     }
-
+  
     .footer__copy-right {
-        width: 1440px;
-        margin-right: 47px;
-        gap: 152px;
+      width: 1440px;
+      margin-right: 47px;
+      gap: 152px;
     }
-
+  
     .copy-right {
-        margin-top: 11px;
-        margin-left: 43px;
-        margin-bottom: 7px;
+      margin-top: 11px;
+      margin-left: 73px;
+      margin-bottom: 7px;
     }
-
+  
     .social-icon {
-        margin-top: 22px;
+      margin-top: 22px;
     }
-
+  
     .footer__install-app img {
-        width: 161.999px;
-        height: 48px;
+      width: 161.999px;
+      height: 48px;
     }
-}
+  }
+  
