--- a/Practice02/src/style/sass/layout/_banner.scss
+++ b/Practice02/src/style/sass/layout/_banner.scss
@@ -294,7 +294,7 @@
   
       &__box {
         justify-content: center;
-        display: inline;
+        flex-direction: row;
         height: 60px;
         margin-right: 53px;
         margin-top: -6px;
