--- a/Practice02/src/style/sass/components/_about-us-content.scss
+++ b/Practice02/src/style/sass/components/_about-us-content.scss
@@ -2,7 +2,7 @@
   @extend %flex-center;
   flex-direction: column;
   gap: 40px;
-  margin-top: 25px;
+  padding-top: 24px;
   margin-right: 5px;
 
   h2 {
