--- a/Practice02/src/style/sass/layout/_banner.scss
+++ b/Practice02/src/style/sass/layout/_banner.scss
@@ -158,7 +158,7 @@
     height: 308.288px;
     display: flex;
     margin-top: 15px;
-    margin-right: 0px;
+    margin-left: 4px;
   }
   
   .graph-img {
