Fix cursor pointer

--- a/Practice02/src/style/sass/layout/_functions-section.scss
+++ b/Practice02/src/style/sass/layout/_functions-section.scss
@@ -28,6 +28,7 @@
   font-weight: 500;
   line-height: 16px;
   margin-top: 71px;
+  cursor: pointer;
 
   &:hover {
     background-color: var(--perano);
