--- a/Practice02/src/style/sass/pages/_homepage.scss
+++ b/Practice02/src/style/sass/pages/_homepage.scss
@@ -23,5 +23,6 @@ body {
 @media only screen and (min-width: 1400px) {
     .container {
         max-width: 1440px;
+        margin: auto;
     }
 }
