--- a/Practice02/src/style/sass/layout/_product-section.scss
+++ b/Practice02/src/style/sass/layout/_product-section.scss
@@ -8,7 +8,7 @@
 .timeline {
   border-radius: 4px;
   width: 384px;
-  height: 303.094px;
+  height: 303px;
   margin-top: 29px;
 
   img {
@@ -22,7 +22,7 @@
     margin-top: 32px;
     border-radius: 4px;
     width: 434px;
-    height: 333.094px;
+    height: 333px;
   }
 }
 
@@ -34,6 +34,7 @@
     height: 641px;
     gap: 74px;
     margin: auto;
+    margin-top: 100px;
   }
 
   .timeline {
