Fix class container

--- a/Practice02/src/style/sass/components/_banner-logo.scss
+++ b/Practice02/src/style/sass/components/_banner-logo.scss
@@ -16,7 +16,7 @@
   height: 17px;
 }
 
-.fb {
+.facebook {
   width: 53.17px;
   height: 11px;
   margin-right: 22px;
@@ -39,7 +39,7 @@
 
 .google img,
 .airbnb img,
-.fb img,
+.facebook img,
 .hubspot img,
 .slack img {
   cursor: pointer;
@@ -70,7 +70,7 @@
     margin-right: 3px;
   }
 
-  .fb {
+  .facebook {
     width: 77px;
     height: 16px;
     margin-right: 7px;
@@ -91,7 +91,7 @@
 
   .google,
   .airbnbbnb,
-  .fb,
+  .facebook,
   .hubspot,
   .slack img {
     cursor: pointer;
