--- a/Practice02/src/style/sass/pages/_homepage.scss
+++ b/Practice02/src/style/sass/pages/_homepage.scss
@@ -17,6 +17,7 @@ body {
 @media only screen and (min-width: 992px) {
     .container {
         min-width: 992px;
+        margin: auto;
     }
 }
 
