--- a/Practice02/src/style/sass/layout/_header.scss
+++ b/Practice02/src/style/sass/layout/_header.scss
@@ -53,6 +53,10 @@
       background: none;
       border: none;
       cursor: pointer;
+
+      img {    
+        width: 100%;
+        height: auto;}
     }
   
     p {
