--- a/Practice02/src/style/sass/layout/_footer.scss
+++ b/Practice02/src/style/sass/layout/_footer.scss
@@ -263,9 +263,10 @@ footer {
     }
   
     .app {
-      margin-top: 2px;
+      margin-top: 0px;
       margin-left: 5px;
       margin-right: 92px;
+      margin-bottom: 2pxgit;
       gap: 15px;
     }
   
