--- a/Practice02/src/style/sass/layout/_footer.scss
+++ b/Practice02/src/style/sass/layout/_footer.scss
@@ -266,7 +266,7 @@ footer {
       margin-top: 0px;
       margin-left: 5px;
       margin-right: 92px;
-      margin-bottom: 2pxgit;
+      margin-bottom: 2px;
       gap: 15px;
     }
   
