--- a/Practice02/src/style/sass/layout/_header.scss
+++ b/Practice02/src/style/sass/layout/_header.scss
@@ -55,8 +55,8 @@
       cursor: pointer;
 
       img {    
-        width: 24px;
-        height: auto;}
+        width: 24;
+        height: 16;}
     }
   
     p {
