Fix width height issue

--- a/Practice02/src/style/sass/layout/_header.scss
+++ b/Practice02/src/style/sass/layout/_header.scss
@@ -15,8 +15,8 @@
     }
   
     &__logo img {
-      width: 77px;
-      height: auto;
+      width: 77;
+      height: 20;
     }
   
     &__nav {
